--- a/src/package.json
+++ b/src/package.json
@@ -14,5 +14,10 @@
         "postcss": "^8.4.6",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^40.0.0",
+        "@yaireo/tagify": "^4.17.9",
+        "quill": "^1.3.7"
     }
 }
